--- a/primer/legacy.html
+++ b/primer/legacy.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.3016"/>
-    <link id="_style_primer" rel="stylesheet" href="/dove/assets/primer/css/style.css?v=0.0.2.3016"/><!-- custom-head -->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.4353"/>
+    <link id="_style_primer" rel="stylesheet" href="/dove/assets/primer/css/style.css?v=0.0.2.4353"/><!-- custom-head -->
     <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -17,7 +17,7 @@
       <div class="_view">
         <div class="container-lg px-3 my-5">
           <header class="_header">
-            <div class="_layout">
+            <div class="_layout markdown-body">
               <h1>
                 <div class="_logo"><a href="/dove">Dove</a>
                 </div>
@@ -25,7 +25,7 @@
             </div>
           </header>
           <nav class="_nav">
-            <div class="_layout _960">
+            <div class="_layout markdown-body">
 <a href="/dove/primer/">Primer</a>
 <i class="_icon"><i class="isvg">
                   <svg viewBox="0 0 24 24">
@@ -204,7 +204,7 @@
             </article>
           </main>
           <footer class="_footer">
-            <div class="_layout _960"><code>// by Techie Joe 2025</code>
+            <div class="_layout markdown-body"><code>// by Techie Joe 2025</code>
             </div>
           </footer>
         </div>
