--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.4352"/><!-- custom-head -->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.3441"/><!-- custom-head -->
     <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -39,15 +39,19 @@
           <article class="_article _layout _960"><code>// Dove is a theme development project.</code>
             <pre class="scrollable">site_url : <a class="_no_u" href="/dove">/dove</a>
 home_url : <a class="_no_u" href="/dove">/dove</a>
-version  : 0.0.2.4352
-revision : 33.10.4352
+version  : 0.0.2.3441
+revision : 33.11.3441
 ghost                : bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv
 google_analytics     : (undefined)
-cloudflare_analytics : (undefined)</pre><code>// Layouts</code>
+cloudflare_analytics : (undefined)</pre><code>// Markdowns</code>
             <nav>
               <ul>
                 <li><a href="home">Home</a>
                 </li>
+              </ul>
+            </nav><code>// Layouts</code>
+            <nav>
+              <ul>
                 <li>
 <a href="/dove/core/">Core</a>
 <i class="_icon"><i class="isvg">
@@ -105,6 +109,6 @@ cloudflare_analytics : (undefined)</pre><code>// Layouts</code>
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.4352"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3441"></script>
   </body>
 </html>
