--- a/primer/404.html
+++ b/primer/404.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html class="_primer_layout" lang="en-US"><!-- page.path   : primer/page.html -->
+<html class="_primer_layout" lang="en-US"><!-- page.path   : primer/404.html -->
   <!-- page.layout : pugs/primer -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
-    <title>Page | Dove</title><!-- End Jekyll SEO tag -->
+    <title>Not found | Dove</title><!-- End Jekyll SEO tag -->
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
@@ -14,7 +14,11 @@
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
       <h1><a href="/dove">Dove</a></h1>
-      <p><code>// content for : Page</code></p><code>// by Techie Joe 2025</code>
+      <h1>Oops! Nothing found</h1>
+      <p>The content you are looking for is not here.</p>
+      <div style="margin-top:8rem"></div>
+      <p>{% include back.html %}{% include gohome.html %}
+      </p><code>// by Techie Joe 2025</code>
       <div class="my-3 text-right">
         <p>{% include edit-link.html %}</p><!-- custom-body -->
         <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
