--- a/core/index.html
+++ b/core/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.1043"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.3857"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -144,7 +144,7 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 
 <p><img src="https://techie-joe.github.io/core/images/octocat-64x64.png" alt="Left Octocat" class="float-left mr mb pa bg-white" width="64" height="64" />
 <img src="https://techie-joe.github.io/core/images/octocat-64x64.png" alt="Right Octocat" class="float-right ml mb pa bg-white" width="64" height="64" />
-<img src="https://techie-joe.github.io/core/images/core-64x64.png" alt="Small image" class="centered mb pa bg-secondary" width="64" height="64" /></p>
+<img src="https://techie-joe.github.io/core/images/core-64x64.png" alt="Small image" class="centered mb pa bg-white" width="64" height="64" /></p>
 
 <hr class="mt-3" />
 
@@ -470,6 +470,6 @@ Every new line in footnote should be prefixed with 2 space or 4 space indentatio
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.1043"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3857"></script>
   </body>
 </html>
