--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.1043"/>
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.3857"/>
     <style>h1.hero { font-family: 'Arial',system-ui,sans-serif }</style><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -66,21 +66,21 @@
 <a href="/dove/mallet/404.html">404</a>
                 </li>
                 <li>
-<a href="/dove/primer/">Primer</a>
+<a href="/dove/prime/">Prime</a>
 <i class="_icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                       </svg></i></i>
-<a href="/dove/primer/legacy.html">Legacy</a>
-<a href="/dove/primer/home.html">Home</a>
-<a href="/dove/primer/page.html">Page</a>
-<a href="/dove/primer/404.html">404</a>
+<a href="/dove/prime/legacy.html">Legacy</a>
+<a href="/dove/prime/home.html">Home</a>
+<a href="/dove/prime/page.html">Page</a>
+<a href="/dove/prime/404.html">404</a>
                 </li>
               </ul>
             </nav>
             <pre class="scrollable">source   : <a href="https://github.com/techie-joe/dove">techie-joe/dove</a>
-version  : 0.0.2.1043
-revision : 33.15.1043
+version  : 0.0.2.3857
+revision : 33.9.3857
 site_url : <a class="_no_u" href="/dove">/dove</a>
 home_url : <a class="_no_u" href="/dove">/dove</a>
 ghost                : bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv
@@ -101,6 +101,6 @@ cloudflare_analytics : (undefined)</pre>
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.1043"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3857"></script>
   </body>
 </html>
