--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style_prime" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.2514"/>
+    <link id="_style_prime" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.5330"/>
     <style>h1.hero { font-family: 'Arial',system-ui,sans-serif }</style><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -18,19 +18,18 @@
       <nav>
         <ul>
           <li><b>Dove</b>
-<i class="_icon"><i class="isvg">
-                <svg viewBox="0 0 24 24">
-                  <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                </svg></i></i><a href="https://techie-joe.github.io/dove/home">Home</a>
+<i class="_icon"><i class="itext">&bull;</i></i>
+<a href="https://techie-joe.github.io/dove/home">Home</a>
           </li>
           <li><b>Core</b>
 <i class="_icon"><i class="isvg">
                 <svg viewBox="0 0 24 24">
                   <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                 </svg></i></i>
-<a href="/dove/core/">Home</a>
 <a href="/dove/core/preview.html">Preview</a>
 <a href="/dove/core/legacy.html">Legacy</a>
+<i class="_icon"><i class="itext">&bull;</i></i>
+<a href="/dove/core/">Home</a>
 <a href="/dove/core/page.html">Page</a>
 <a href="/dove/core/404.html">404</a>
           </li>
@@ -39,9 +38,10 @@
                 <svg viewBox="0 0 24 24">
                   <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                 </svg></i></i>
-<a href="/dove/nova/">Home</a>
 <a href="/dove/nova/preview.html">Preview</a>
 <a href="/dove/nova/legacy.html">Legacy</a>
+<i class="_icon"><i class="itext">&bull;</i></i>
+<a href="/dove/nova/">Home</a>
 <a href="/dove/nova/page.html">Page</a>
 <a href="/dove/nova/404.html">404</a>
           </li>
@@ -50,9 +50,10 @@
                 <svg viewBox="0 0 24 24">
                   <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                 </svg></i></i>
-<a href="/dove/mallet/">Home</a>
 <a href="/dove/mallet/preview.html">Preview</a>
 <a href="/dove/mallet/legacy.html">Legacy</a>
+<i class="_icon"><i class="itext">&bull;</i></i>
+<a href="/dove/mallet/">Home</a>
 <a href="/dove/mallet/page.html">Page</a>
 <a href="/dove/mallet/404.html">404</a>
           </li>
@@ -61,17 +62,18 @@
                 <svg viewBox="0 0 24 24">
                   <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                 </svg></i></i>
-<a href="/dove/prime/">Home</a>
 <a href="/dove/prime/preview.html">Preview</a>
 <a href="/dove/prime/legacy.html">Legacy</a>
+<i class="_icon"><i class="itext">&bull;</i></i>
+<a href="/dove/prime/">Home</a>
 <a href="/dove/prime/page.html">Page</a>
 <a href="/dove/prime/404.html">404</a>
           </li>
         </ul>
       </nav>
-      <pre class="scrollable">source   : <a href="https://github.com/techie-joe/dove">techie-joe/dove</a>
-version  : 0.0.2.2514
-revision : 33.2514
+      <pre class="scrollable">source   : <a class="_no_u" href="https://github.com/techie-joe/dove" target="_edit">techie-joe/dove</a>
+version  : 0.0.2.5330
+revision : 33.5330
 site_url : <a class="_no_u" href="/dove">/dove</a>
 home_url : <a class="_no_u" href="/dove">/dove</a>
 ghost                : bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv
@@ -90,6 +92,6 @@ cloudflare_analytics : (undefined)</pre>
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.2514"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.5330"></script>
   </body>
 </html>
